--- a/src/App/main.sass
+++ b/src/App/main.sass
@@ -1,6 +1,14 @@
+@import ../assets/css/index
+
 *
   padding: 0
   margin: 0
+  box-sizing: border-box
+
+body
+  font-family: $font-stack
+  font-size: $font-size-normal
+  color: black
 
 .fade-enter-active, .fade-leave-active
   transition all .2s ease
@@ -17,11 +25,12 @@
 
   display: flex
   justify-content: space-between
-  align-item: stretch
+  align-items: stretch
   border-bottom: 1px solid black
 
 main
-  margin: 2rem auto
+  padding: 2rem 0
+  height: 100vh
 
 .bottom-nav
   position: fixed
@@ -32,5 +41,5 @@ main
 
   display: flex
   justify-content: space-between
-  align-item: stretch
+  align-items: stretch
   border-top: 1px solid black
