--- a/src/components/ActionItem/main.html
+++ b/src/components/ActionItem/main.html
@@ -1,21 +1,35 @@
-<form>
-    <input v-model="action.title" type="text" placehoder="Untitled" /><br>
+<form class="padding-normal">
+    <div class="form-group">
+        <input v-model="action.title" type="text" placeholder="Untitled" />
+    </div>
 
-    <select v-model="action.project">
-        <option value="">None</option>
-        <option v-for="project in projects" :key="project.id" :value="project.id">
-            {{ project.title }}
-        </option>
-    </select><br>
+    <div class="form-group">
+        <label>Project</label>
+        <select v-model="action.project">
+            <option value="">None</option>
+            <option v-for="project in projects" :key="project.id" :value="project.id">
+                {{ project.title }}
+            </option>
+        </select>
+    </div>
 
-    <select v-model="action.context">
-        <option value="">None</option>
-        <option v-for="context in contexts" :key="context.id" :value="context.id">
-            {{ context.title }}
-        </option>
-    </select><br>
+    <div class="form-group">
+        <label>Context</label>
+        <select v-model="action.context">
+            <option value="">None</option>
+            <option v-for="context in contexts" :key="context.id" :value="context.id">
+                {{ context.title }}
+            </option>
+        </select>
+    </div>
 
-    <input v-model="action.dueDate" type="date" placeholder="None"/><br>
+    <div class="form-group">
+        <label>Due</label>
+        <input v-model="action.dueDate" type="date" placeholder="None"/>
+    </div>
 
-    <input v-model="action.repeat" value="" placehoder="TO BE DONE" readonly /><br>
+    <div class="form-group">
+        <label>Repeat</label>
+        <input v-model="action.repeat" value="" placehoder="TO BE DONE" readonly />
+    </div>
 </form>
