--- a/src/components/ActionItem/main.sass
+++ b/src/components/ActionItem/main.sass
@@ -1,2 +1,17 @@
+@import ../../assets/css/index
+
 form
-  input, select, textarea
+  .form-group
+    display: flex
+    width: 100%
+    justify-content: space-between
+    input, select
+      flex: 2
+      text-align: right
+      @extend .padding-sm
+    label
+      flex: 1
+
+  .form-group
+    border-bottom: 1px solid black
+    @extend .padding-normal
