new: dev: action#edit

--- a/src/components/ActionItem/main.html
+++ b/src/components/ActionItem/main.html
@@ -1,4 +1,4 @@
-<form class="padding-normal">
+<form class="padding-normal" v-if="!loading">
     <div class="form-group">
         <input v-model="action.title" type="text" placeholder="Untitled" />
     </div>
