project item, projects, project action list

--- a/src/App/main.html
+++ b/src/App/main.html
@@ -9,8 +9,9 @@
         <router-link to="/">Home</router-link>
         <router-link to="/inbox">Inbox</router-link>
         <router-link to="/projects">Projects</router-link>
-        <router-link to="/contexts">Contexts</router-link>
-        <router-link to="/agenda">Agenda</router-link>
-        <router-link to="/action">New Inbox</router-link>
+        <!-- <router-link to="/contexts">Contexts</router-link> -->
+        <!-- <router-link to="/agenda">Agenda</router-link> -->
+        <router-link to="/action/new">+Inbox</router-link>
+        <router-link to="/project/new">+Project</router-link>
     </nav>
 </div>
