--- a/src/views/TopActionBarView/main.html
+++ b/src/views/TopActionBarView/main.html
@@ -1,3 +1,3 @@
 <nav class="top-action-bar">
-    <a href="#" v-for="which in ['left', 'middle', 'right']" v-if="topActions[which]" @click.prevent="action(which)">{{ topActions[which].title }}</a>
+    <span v-for="which in ['left', 'middle', 'right']" v-if="topActions[which]" @click.prevent="action(which)">{{ topActions[which].title }}</span>
 </nav>
