--- a/src/App/main.sass
+++ b/src/App/main.sass
@@ -28,18 +28,24 @@ body
   align-items: stretch
   border-bottom: 1px solid black
 
+.new-action
+  display: flex
+  position: fixed
+  bottom: 1rem
+  right: 1rem
+  border: 1px solid #eee
+  width: 2rem
+  height: 2rem
+  align-items: center
+  justify-content: center
+  border-radius: 50%
+  a
+    display: inline-block
+    text-decoration: none
+    font-size: 1.3rem
+    vertical-align: middle
+
 main
-  padding: 2rem 0
+  padding-top: 2rem
   height: 100vh
 
-.bottom-nav
-  position: fixed
-  bottom: 0
-  left: 0
-  right: 0
-  height: 2rem
-
-  display: flex
-  justify-content: space-between
-  align-items: stretch
-  border-top: 1px solid black
