--- a/src/components/ActionItem/main.sass
+++ b/src/components/ActionItem/main.sass
@@ -5,10 +5,12 @@ form
     display: flex
     width: 100%
     justify-content: space-between
-    input, select
+    input, select, textarea
       flex: 2
-      text-align: right
       @extend .padding-sm
+    input, select
+      text-align: right
+
     label
       flex: 1
 
