--- a/src/components/ProjectItem/main.html
+++ b/src/components/ProjectItem/main.html
@@ -2,4 +2,27 @@
     <div class="form-group">
         <input v-model="project.title" type="text" placeholder="Untitled" />
     </div>
+
+    <div class="form-group">
+        <textarea v-model="project.note" placeholder="Note"></textarea>
+    </div>
+
+    <div class="form-group">
+        <label>Status</label>
+        <select v-model="project.status">
+            <option value="">None</option>
+            <option v-for="status in projectStatus" :value="status">{{ status }}</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label>Context</label>
+        <select v-model="project.context">
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label>Due</label>
+        <input v-model="project.dueDate" type="date" />
+    </div>
 </form>
