--- a/src/components/ActionItem/main.html
+++ b/src/components/ActionItem/main.html
@@ -29,7 +29,7 @@
         <input v-model="action.target" type="number" :placeholder="targetHelpText"/>
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label>Context</label>
         <select v-model="action.context">
             <option value="">None</option>
@@ -37,7 +37,7 @@
                 {{ context.title }}
             </option>
         </select>
-    </div>
+    </div> -->
 
     <div class="form-group">
         <label>Due</label>
