--- a/src/components/ProjectItem/main.html
+++ b/src/components/ProjectItem/main.html
@@ -15,11 +15,11 @@
         </select>
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label>Context</label>
         <select v-model="project.context">
         </select>
-    </div>
+    </div> -->
 
     <div class="form-group">
         <label>Due</label>
