--- a/src/components/ProjectItem/main.html
+++ b/src/components/ProjectItem/main.html
@@ -1,10 +1,10 @@
 <form class="padding-normal" v-if="!loading">
     <div class="form-group">
-        <input v-model="project.title" type="text" placeholder="Untitled" />
+        <input v-model.lazy="project.title" type="text" placeholder="Untitled" />
     </div>
 
     <div class="form-group">
-        <textarea v-model="project.note" placeholder="Note"></textarea>
+        <textarea v-model.lazy="project.note" placeholder="Note"></textarea>
     </div>
 
     <div class="form-group">
