--- a/src/App/main.sass
+++ b/src/App/main.sass
@@ -11,10 +11,10 @@ body
   color: black
 
 .fade-enter-active, .fade-leave-active
-  transition all .2s ease
+  transition: all .2s ease
 
 .fade-enter, .fade-leave-active
-  opacity 0
+  opacity: 0
 
 .top-action-bar
   position: fixed
