--- a/src/components/ActionItem/main.sass
+++ b/src/components/ActionItem/main.sass
@@ -1,19 +1,2 @@
-@import ../../assets/css/index
-
-form
-  .form-group
-    display: flex
-    width: 100%
-    justify-content: space-between
-    input, select, textarea
-      flex: 2
-      @extend .padding-sm
-    input, select
-      text-align: right
-
-    label
-      flex: 1
-
-  .form-group
-    border-bottom: 1px solid black
-    @extend .padding-normal
+.weui-cells:before
+  display: none
