--- a/src/components/ActionItem/main.sass
+++ b/src/components/ActionItem/main.sass
@@ -1,2 +1,12 @@
-.weui-cells:before
-  display: none
+.clear-group-border-bottom
+  .weui-cells:after
+    display: none
+
+.clear-group-border-top
+  .weui-cells:before
+    display: none
+
+.clear-group-border
+  .weui-cells:before,
+  .weui-cells:after
+    display: none
