--- a/src/views/TopActionBarView/main.html
+++ b/src/views/TopActionBarView/main.html
@@ -5,6 +5,7 @@
         :right-options="topActions.right"
         @on-click-back="action('left')"
         @on-click-title="action('middle')"
+        @on-click-more="action('right')"
     >
         {{ topActions.middle.title }}
 
