--- a/src/components/ActionItem/Description/main.html
+++ b/src/components/ActionItem/Description/main.html
@@ -1,3 +1,3 @@
-<group title="" label-align="left" label-width="4em" label-margin-right="2em">
+<group title="" label-align="left" label-width="4em" label-margin-right="2em" class="clear-group-border">
     <x-textarea v-model.lazy="action.description" placeholder="Description" :height="200" ></x-textarea>
 </group>
